# ai_studio

./: pubspec.yaml
integration_test/: simple_test.dart
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_ai_studio.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_ai_studio.podspec
rust_builder/windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
