[package]
name = "rust_lib_ai_studio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
tokio = { version = "1.34.0", features = ["time"] }
anyhow = "1.0.75"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
